Add TODO to increase vertical distance between pyramid and platform.

--- a/svg-playground.html
+++ b/svg-playground.html
@@ -17,6 +17,8 @@
     const darkPyramidFaceBottomFrontLeftToBottomBackLeftDeltaX = 4.9;
     const darkPyramidFaceBottomFrontLeftToBottomBackLeftDeltaY = 3.6;
 
+    // TODO: Increase vertical distance between pyramid and platform to match
+    // template, and adjust other distances as needed.
     const darkPyramidFaceToDarkPlatformFaceDeltaY = 3.96;
 
     const brightPlatformFaceBottomLeftToRightDeltaX = 49;
