Clarify TODO comment.

--- a/svg-playground.html
+++ b/svg-playground.html
@@ -17,8 +17,9 @@
     const darkPyramidFaceBottomFrontLeftToBottomBackLeftDeltaX = 4.9;
     const darkPyramidFaceBottomFrontLeftToBottomBackLeftDeltaY = 3.6;
 
-    // TODO: Increase vertical distance between pyramid and platform to match
-    // template, and adjust other distances as needed.
+    // TODO: Increase vertical distance between pyramid and platform to more
+    // closely match template, and adjust other distances as needed. Ensure that
+    // all lines are parallel that should be.
     const darkPyramidFaceToDarkPlatformFaceDeltaY = 3.96;
 
     const brightPlatformFaceBottomLeftToRightDeltaX = 49;
