--- a/svg-playground.html
+++ b/svg-playground.html
@@ -1,5 +1,7 @@
 <head>
   <script>
+    const logoColor = "white";
+
     const percentToPixelsFactor = 7;
 
     const outerCircleRadius = 49;
@@ -58,15 +60,6 @@
     <img class="template layer" src="svg-template.png" />
 
     <svg class="drawing layer">
-      <!-- Outer circle of logo.
-
-           TODO: Figure out how to remove this without causing a visible
-           boundary between the circle and the bottom of the platform. -->
-      <circle
-          cx="50%" cy="50%" r="49%" stroke-width="2%"
-          stroke="white" fill="transparent"
-          mask="url(#drawingMask)" />
-
       <!-- SVG content is added programmatically below. -->
     </svg>
     <script>
@@ -83,11 +76,14 @@
       canvasRect.setAttribute('y', '0');
       canvasRect.setAttribute('height', '100%');
       canvasRect.setAttribute('width', '100%');
-      canvasRect.setAttribute('fill', 'white');
+      canvasRect.setAttribute('fill', logoColor);
       canvasRect.setAttribute('mask', 'url(#drawingMask)');
       drawing.append(canvasRect);
 
       // Draw outer logo circle.
+      //
+      // TODO: Figure out how to eliminate visible boundary between outer circle
+      // and bottom of platform.
       drawCircle(
           logoCenterX,
           logoCenterY,
