Add comments for {alpha,beta,gamma}StarParam constants.

--- a/svg-playground.html
+++ b/svg-playground.html
@@ -14,8 +14,11 @@
     const logoCenterX = 50;
     const logoCenterY = 50;
 
+    // Controls the rotational position of the rightmost starpoint.
     const alphaStarParam = 0.2675;
+    // Controls the thickness of the starpoints.
     const betaStarParam = 0.06;
+    // Controls how close the starpoints are to each other.
     const gammaStarParam = 15.7;
 
     const darkPyramidFaceBottomFrontLeftToTopDeltaX = 6.8;
