Make alternate param values the new defaults.

--- a/svg-playground.html
+++ b/svg-playground.html
@@ -4,12 +4,12 @@
     const backgroundColor = 'green';
     const templateOpacity = 0;
     const drawingOpacity = 1;
-    const useAlternateParamValues = true;
+    const useAlternateParamValues = false;
 
     const percentToPixelsFactor = chooseParamValue(7);
 
     const outerCircleRadius = chooseParamValue(49);
-    const innerStarCircleRadius = chooseParamValue(14.75, 15);
+    const innerStarCircleRadius = chooseParamValue(15);
     const outerStarPointTipDistance = chooseParamValue(50);
     const outerStarPointStraightDistance = chooseParamValue(40);
     const logoCenterX = chooseParamValue(50);
@@ -23,14 +23,14 @@
     const gammaStarParam = chooseParamValue(15.7);
 
     const darkPyramidFaceBottomFrontLeftToTopDeltaX =
-        chooseParamValue(6.8, 7);
+        chooseParamValue(7);
     const darkPyramidFaceBottomFrontLeftToBottomBackLeftDeltaX =
-        chooseParamValue(4.9, 4.4);
+        chooseParamValue(4.4);
     const darkPyramidFaceBottomFrontLeftToBottomBackLeftDeltaY =
-        chooseParamValue(3.6, 3.4);
+        chooseParamValue(3.4);
 
     const darkPyramidFaceToDarkPlatformFaceDeltaY =
-        chooseParamValue(4.0, 3.6);
+        chooseParamValue(3.6);
 
     const brightPlatformFaceBottomLeftToRightDeltaX = chooseParamValue(49);
 
