Make alternate parameter values the new defaults.

--- a/svg-playground.html
+++ b/svg-playground.html
@@ -20,10 +20,10 @@
     // Controls the thickness of the starpoints.
     const betaStarParam = chooseParamValue(0.03);
     // Controls how close the starpoints are to each other.
-    const gammaStarParam = chooseParamValue(15.7, 15.72);
+    const gammaStarParam = chooseParamValue(15.72);
 
     const darkPyramidFaceBottomFrontLeftToTopDeltaX =
-        chooseParamValue(6.8, 6.9);
+        chooseParamValue(6.9);
     const darkPyramidFaceBottomFrontLeftToBottomBackLeftDeltaX =
         chooseParamValue(4.6);
     const darkPyramidFaceBottomFrontLeftToBottomBackLeftDeltaY =
@@ -33,7 +33,7 @@
         chooseParamValue(3.6);
 
     const brightPlatformFaceBottomLeftToRightDeltaX =
-        chooseParamValue(48.5, 49.25);
+        chooseParamValue(49.25);
 
     function chooseParamValue(defaultParamValue, alternateParamValue = null) {
       return useAlternateParamValues ?
