--- a/svg-playground.html
+++ b/svg-playground.html
@@ -16,10 +16,13 @@
     const logoCenterY = chooseParamValue(50);
 
     // Controls the rotational position of the rightmost starpoint.
+    // A higher value makes the starting point further counterclockwise.
     const alphaStarParam = chooseParamValue(0.2675);
     // Controls the thickness of the starpoints.
+    // A higher value makes them thicker.
     const betaStarParam = chooseParamValue(0.03);
     // Controls how close the starpoints are to each other.
+    // A higher value makes them closer.
     const gammaStarParam = chooseParamValue(15.72);
 
     const darkPyramidFaceBottomFrontLeftToTopDeltaX =
