--- a/svg-playground.html
+++ b/svg-playground.html
@@ -101,15 +101,15 @@
       drawingMask.setAttribute('id', 'drawingMask');
       drawing.append(drawingMask);
 
-      let canvasRect =
+      let drawingRect =
           document.createElementNS("http://www.w3.org/2000/svg", 'rect');
-      canvasRect.setAttribute('x', '0');
-      canvasRect.setAttribute('y', '0');
-      canvasRect.setAttribute('height', '100%');
-      canvasRect.setAttribute('width', '100%');
-      canvasRect.setAttribute('fill', logoColor);
-      canvasRect.setAttribute('mask', 'url(#drawingMask)');
-      drawing.append(canvasRect);
+      drawingRect.setAttribute('x', '0');
+      drawingRect.setAttribute('y', '0');
+      drawingRect.setAttribute('height', '100%');
+      drawingRect.setAttribute('width', '100%');
+      drawingRect.setAttribute('fill', logoColor);
+      drawingRect.setAttribute('mask', 'url(#drawingMask)');
+      drawing.append(drawingRect);
 
       // Draw outer logo circle.
       //
